--- a/pom.xml
+++ b/pom.xml
@@ -81,6 +81,16 @@
 					</excludes>
 				</configuration>
 			</plugin>
+			  <plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.11.1</version>
+				<configuration>
+				<source>17</source>
+				<target>17</target>
+				</configuration>
+			</plugin>
+
 						<plugin>
 				<groupId>org.jacoco</groupId>
 				<artifactId>jacoco-maven-plugin</artifactId>
