--- a/pom.xml
+++ b/pom.xml
@@ -175,6 +175,15 @@
 				<enabled>false</enabled>
 			</releases>
 		</repository>
+		<repository>
+			<id>central</id>
+			<url>https://repo.maven.apache.org/maven2</url>
+			<releases>
+				<release>
+				<next>never</next>
+				</release>
+			</releases>
+		</repository>
 	</repositories>
 	<pluginRepositories>
 		<pluginRepository>
