--- a/pom.xml
+++ b/pom.xml
@@ -176,7 +176,7 @@
 			</releases>
 		</repository>
 		<repository>
-			<id>central</id>
+			<id>maven.repository.org</id>
 			<url>https://repo.maven.apache.org/maven2</url>
 		</repository>
 	</repositories>
