--- a/DockerFile
+++ b/DockerFile
@@ -11,4 +11,5 @@ WORKDIR /opt/app
 # cp target/springboot-3-0.0.1-SNAPSHOT.jar /opt/app/app.jar
 COPY ${JAR_FILE} app.jar
 
+# java -jar /opt/app/app.jar
 ENTRYPOINT ["java","-jar","app.jar"]
